# box-office-drafting

./: .gitignore  README.md  app.py  create_release.sh  pyproject.toml  test_gsheet_layout.py
scripts/: sqlmesh_coverage.py
src/: __init__.py  etl.py
src/assets/: dashboard_notes.json
src/dashboard/sqlmesh_project/: config.py
src/dashboard/sqlmesh_project/.cache/model_definition/: 0_226_27_27_100__models___2_cleaned__box_office_mojo_dump__1762616257_3481963__2760427349__ethan_noah_2025__duckdb  0_226_27_27_100__models___2_cleaned__box_office_mojo_dump__1762616257_3481963__3051633575__friends_2025__duckdb  0_226_27_27_100__models___2_cleaned__box_office_mojo_dump__1762616257_3481963__3975594418__ethan_noah_2025__duckdb  0_226_27_27_100__models___2_cleaned__box_office_mojo_dump__1763316997_9251938__3051633575__friends_2025__duckdb  0_226_27_27_100__models___2_cleaned__box_office_mojo_dump__1763316997_9251938__3975594418__ethan_noah_2025__duckdb  0_226_27_27_100__models___2_cleaned__draft_year_exclusions__1762616257_3481963__2760427349__ethan_noah_2025__duckdb  0_226_27_27_100__models___2_cleaned__draft_year_exclusions__1762616257_3481963__3051633575__friends_2025__duckdb  0_226_27_27_100__models___2_cleaned__draft_year_exclusions__1762616257_3481963__3975594418__ethan_noah_2025__duckdb  0_226_27_27_100__models___2_cleaned__draft_year_exclusions__1763316997_9251938__3051633575__friends_2025__duckdb  0_226_27_27_100__models___2_cleaned__draft_year_exclusions__1763316997_9251938__3975594418__ethan_noah_2025__duckdb  (+50 more)
src/dashboard/sqlmesh_project/models/_1_raw/: box_office_mojo_dump.py  (+3 more)
src/dashboard/sqlmesh_project/tests/: README.md  config.yaml  test_base_query.yaml  test_best_picks.yaml  test_cleaned_box_office.yaml  test_cleaned_drafter.yaml  test_cleaned_manual_adds.yaml  test_cleaned_multipliers.yaml  test_draftee_dashboard.yaml  test_scoreboard.yaml  test_worst_picks.yaml
src/dashboard/sqlmesh_project/utils/: gspread_utils.py  ssl_context.py
src/sheets/: __init__.py  layout.py  runner.py
src/sheets/definitions/: __init__.py  dashboard.py
src/sheets/tabs/: __init__.py  dashboard.py  draftee.py  formats.py
src/utils/: config.py  config_types.py  constants.py  db_connection.py  format.py  gsheet.py  logging_config.py  query.py  read_config.py
tests/: __init__.py  conftest.py  test_gsheet_layout.py  test_sqlmesh_project.py
tests/etl/: __init__.py  test_sqlmesh.py  test_sync.py
tests/gsheet/: __init__.py  test_dashboard.py  test_layout.py  test_logging.py  test_orchestration.py
tests/sheets/: __init__.py  test_dashboard.py  test_draftee.py  test_layout.py  test_orchestration.py  test_runner.py
tests/utils/: __init__.py  test_config.py  test_db_connection.py  test_format.py  test_gspread_format.py  test_query.py
(+175 files in other folders)
