[project]
name = "box-office-drafting"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "gspread>=6.2.1",
    "gspread-formatting>=1.2.1",
    "lxml>=6.0.2",
    "modal>=1.2.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0.2",
    "sqlmesh>=0.226.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
line-ending = "auto"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pre-commit>=4.4.0",
    "ruff>=0.8.0",
]
